Style: Fix dimm clipping

--- a/src/components/styles/productMainView.scss
+++ b/src/components/styles/productMainView.scss
@@ -41,8 +41,7 @@
   font-size: 16px;
   line-height: 159.96%;
   color: #1D1F22;
-  min-height: 200px;
-  max-height: 300px;
+  min-height: 140px;
   overflow: scroll;
 }
 
